# Tuning_sim2

./: .clinerules  .gitignore  README.md  backlog.md  pyproject.toml  test_beta_parameter.py
code/: __init__.py  clear_notebook_outputs.py  data_simulation.py  modeling_pipeline.py
memory-bank/: progress.md  project_context.md
notebooks/: modelling_pipelines.ipynb  simple_analysis.ipynb
tests/: test_scorecard_reuse.py  test_updated_pipeline.py
